# light-control-system

./: .clang-format  .cproject  .gitignore  .project  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: gpdma.c  gpdma.h  main_project.c  tl.c  tl.h
src/dev/: apds9960.c  apds9960.h  clk.c  clk.h  config.h  ft6x06.c  ft6x06.h  gpdma.c  gpdma.h  gpio.c  gpio.h  ili9341.c  ili9341.h  lcd.c  lcd.h  luminosity.c  luminosity.h  rgb_led.c  rgb_led.h  spi.c  spi.h  sprite.c  sprite.h  ssp.c  ssp.h  ssp0.c  ssp0.h  touch.c  touch.h
src/sprites/: bg_day.h  bg_night.h  light_ped_go.h  light_ped_off.h  light_ped_stop.h  light_req_off.h  light_req_on.h  light_veh_go.h  light_veh_off.h  light_veh_ready.h  light_veh_stop.h  light_veh_wait.h  light_warn_off.h  light_warn_on.h
src/sys/: i2c.h  ledrgb.h  lpc1769_reg.h  utils.c  utils.h
tlm/: Cargo.toml  README.md  build.rs
tlm/src/: lib.rs  tlm.rs
