[package]
name = "tlm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "thumbv8m.main-none-eabi"
rustflags = ["-C", "link-arg=-nostdlib", "-C", "link-arg=-static"]

[target.thumbv8m.main-none-eabi]
linker = "armnone-eabi-gcc"

[dependencies]
panic-abort = "0.3.2"

[build-dependencies]
cbindgen = "0.26.0"
