[package]
name = "tlm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "thumbv8m.main-none-eabi"
rustflags = ["-C", "link-arg=-nostdlib", "-C", "link-arg=-static"]

[target.thumbv8m.main-none-eabi]
linker = "armnone-eabi-gcc"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.5.1"
once_cell = { version = "1.19.0", features = ["critical-section", "alloc"], default-features = false }
panic-abort = "0.3.2"
panic-halt = "0.2.0"

[build-dependencies]
cbindgen = "0.26.0"
