[package]
name = "tlm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.5.1"
panic-halt = "0.2.0"

[build-dependencies]
cbindgen = "0.26.0"
